Code reorg, introduced MappingUtils